# BCC-Academic-Archive

./: README.md
1 Year/AEDI/AEDI_TRABS/: OBS.docx
1 Year/MD/Conjuntos/: Conjuntos.docx
1 Year/MD/Contagem/: Contagem.docx
1 Year/MD/Funções/: funções.pptx
1 Year/MD/Logica/: Argumentos e os krl.docx  Aula14-Aula17.docx
2 Year/AC(Arquitetura de Computadores)/em_sala/: instrucoesDoTipoI  instrucoesTipoI.txt  instrucoesTipoI2
2 Year/AC(Arquitetura de Computadores)/other/: paginas_livro
2 Year/AEDII( Algoritmo e Estruturas de Dados II)/Works/: LER_CALOURO.txt  README.md
2 Year/AEDII( Algoritmo e Estruturas de Dados II)/lib_gfx/: exemplo
2 Year/CN(Calculo Numerico)/Zeros de funções/: Zeros de funções  .pptx
2 Year/LFA(Linguagens Formais e Automatos)/Desafios/: desafio1.py
2 Year/LM(Linguagem de Montagem)/Provas/: P3.asm
2 Year/LM(Linguagem de Montagem)/em_sala/: AckermannPeter.txt  alocacaoDinamica.asm  aula1.asm  aula2.asm  aula3.asm  aula4.asm  aula5.asm  aula6.asm  do_while  for  if  maiorMenor.asm  maiorMenorCorrecao.asm  mips1.asm  mips2.asm  procedimento1.asm  ultimaAula1.asm  while
2 Year/LM(Linguagem de Montagem)/exercicios/: exercicios-para-fazer.save  (+1 more)
2 Year/PP(Paradigmas da Programação)/PP_TRAB/: CMakeLists.txt  README.txt
2 Year/PP(Paradigmas da Programação)/PP_TRAB/include/: CPU.h  Interface.h  Memory.h  defaultLibrary.h  sfml-libs.h
2 Year/PP(Paradigmas da Programação)/PP_TRAB/src/: CPU.cpp  Interface.cpp  Memory.cpp  main.cpp
3 Year/ES(Engenharia de Software)/: 25_08.odt  Planejamento_de_Projeto.odt
4 year/: Git.txt
(+651 files in other folders)
